plugins {
	id 'java'
}


allprojects {
	group = 'red.lixiang.tools'
	version = '0.0.3-snapshot'
	sourceCompatibility = '1.8'
	targetCompatibility = '1.8'
	repositories {
		maven { url 'https://maven.aliyun.com/repository/public/' }
		maven { url 'https://maven.aliyun.com/repository/spring/'}
		mavenCentral()
	}
}


